# data-ai-team

./: .env.template  .gitignore  README.md  pyproject.toml
cli_data_ai/agents/context/: context.py
cli_data_ai/agents/data_analysts/: dashboard_analyst.py  sql_analyst.py  team.py
cli_data_ai/agents/data_analysts/instructions/: prompts.py
cli_data_ai/agents/data_scientists/: data_scientist.py
cli_data_ai/agents/data_scientists/instructions/: prompts.py
cli_data_ai/agents/data_scientists/tripwires/: ds_tripwires.py
cli_data_ai/cli/: app.py  cli.py
cli_data_ai/memory/: memory.py
cli_data_ai/tools/dashboard/metabase/: tools.py
cli_data_ai/tools/db/sqlite/: tools.py
cli_data_ai/tools/ml/: tools.py
cli_data_ai/tools/safeguards/: human_in_the_loop.py
cli_data_ai/utils/: config.py  events_stream.py  mock_db_start.py
