[project]
name = "cli-data-ai"
version = "0.1.0"
description = "An agent-based CLI tool that lets you speak to your data as if you had a team of data analysts"
authors = [
    {name = "Mattia Pennacchietti",email = "1404268@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "typer (>=0.15.3,<0.16.0)",
    "rich (>=14.0.0,<15.0.0)",
    "openai (>=1.76.2,<2.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "openai-agents (>=0.0.14,<0.0.15)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
data-analyst-cli = "cli_data_ai.cli.cli:app"